src/adventOfCode/days/01.1/model gpt35turbo.md
# Parameters

{
  "day": "01.1",
  "model": "gpt-3.5-turbo",
  "preSolvePromptFiles": [],
  "solvePromptFile": "solve/noTemplate/2",
  "solveFailedAttempts": 0
}

# completionsSoFar: 




# solvePrompt:

Here is a coding problem I am trying to solve:

Santa's reindeer typically eat regular reindeer food, but they need a lot of magical energy to deliver presents on Christmas. For that, their favorite snack is a special type of star fruit that only grows deep in the jungle. The Elves have brought you on their annual expedition to the grove where the fruit grows.

To supply enough magical energy, the expedition needs to retrieve a minimum of fifty stars by December 25th. Although the Elves assure you that the grove has plenty of fruit, you decide to grab any fruit you see along the way, just in case.

Collect stars by solving puzzles. Two puzzles will be made available on each day in the Advent calendar; the second puzzle is unlocked when you complete the first. Each puzzle grants one star. Good luck!

The jungle must be too overgrown and difficult to navigate in vehicles or access from the air; the Elves' expedition traditionally goes on foot. As your boats approach land, the Elves begin taking inventory of their supplies. One important consideration is food - in particular, the number of Calories each Elf is carrying (your puzzle input).

The Elves take turns writing down the number of Calories contained by the various meals, snacks, rations, etc. that they've brought with them, one item per line. Each Elf separates their own inventory from the previous Elf's inventory (if any) by a blank line.

For example, suppose the Elves finish writing their items' Calories and end up with the following list:

1000
2000
3000

4000

5000
6000

7000
8000
9000

10000

This list represents the Calories of the food carried by five Elves:

    The first Elf is carrying food with 1000, 2000, and 3000 Calories, a total of 6000 Calories.
    The second Elf is carrying one food item with 4000 Calories.
    The third Elf is carrying food with 5000 and 6000 Calories, a total of 11000 Calories.
    The fourth Elf is carrying food with 7000, 8000, and 9000 Calories, a total of 24000 Calories.
    The fifth Elf is carrying one food item with 10000 Calories.

In case the Elves get hungry and need extra snacks, they need to know which Elf to ask: they'd like to know how many Calories are being carried by the Elf carrying the most Calories. In the example above, this is 24000 (carried by the fourth Elf).

Find the Elf carrying the most Calories. How many total Calories is that Elf carrying?


You must solve  the problem using Deno and Typescript.

You can read files in Deno like this:

```typescript
import * as path from 'https://deno.land/std@0.101.0/path/mod.ts'

const readRelativeInput = (importUrl, inputFile) => {
  const dirname = path.dirname(path.fromFileUrl(importUrl))
  const filePath = path.join(dirname, 'data', inputFile)
  return Deno.readTextFileSync(filePath)
}
```

The puzzle input is stored at `./data/puzzleInput.txt`

The last thing your solution should do is print the answer to the puzzle on a new line like this: `console.log('\n', answer)`


# answer: 



Here's one possible solution to the problem:

```typescript
import * as path from 'https://deno.land/std/path/mod.ts'

const readRelativeInput = (importUrl: string, inputFile: string) => {
  const dirname = path.dirname(path.fromFileUrl(importUrl))
  const filePath = path.join(dirname, 'data', inputFile)
  return Deno.readTextFileSync(filePath)
}

const input = readRelativeInput(import.meta.url, 'puzzleInput.txt')

const elfCalories = input.trim().split('\n\n').map((elfInput) => {
  const items = elfInput.trim().split('\n').map(Number)
  const totalCalories = items.reduce((sum, calories) => sum + calories, 0)
  return totalCalories
})

const maxCalories = Math.max(...elfCalories)

console.log('\n', maxCalories)
```

First, we read the puzzle input file using the `readRelativeInput` function. We then split the input into groups of lines separated by blank lines using `split('\n\n')`. For each group, we split the lines into numbers using `split('\n').map(Number)`, and then compute the total calories using `reduce((sum, calories) => sum + calories, 0)`. We store the total calories for each elf in an array called `elfCalories`.

Finally, we find the maximum value in `elfCalories` using `Math.max(...elfCalories)`, and print it to the console.

Note that this solution assumes that the input file is well-formed (i.e., each line contains a valid number, and each group of lines is separated by a blank line). If the input file is malformed, this solution may produce incorrect results or throw errors.
formatting
# Trying solution: 

 ```typescript
import * as path from "https://deno.land/std/path/mod.ts";

const readRelativeInput = (importUrl: string, inputFile: string) => {
  const dirname = path.dirname(path.fromFileUrl(importUrl));
  const filePath = path.join(dirname, "data", inputFile);
  return Deno.readTextFileSync(filePath);
};

const input = readRelativeInput(import.meta.url, "puzzleInput.txt");

const elfCalories = input.trim().split("\n\n").map((elfInput) => {
  const items = elfInput.trim().split("\n").map(Number);
  const totalCalories = items.reduce((sum, calories) => sum + calories, 0);
  return totalCalories;
});

const maxCalories = Math.max(...elfCalories);

console.log("\n", maxCalories);

``` 

solution: 71934, actual solution: 71934
Solved!
Day 01.1 result: ✔️   Attempts: 1  Time Taken (secs): 15   GPT Requests: 1   Cost: $0.0021060000000000002
