src/adventOfCode/days/01.2/model gpt35turbo.md
# Parameters

{
  "day": "01.2",
  "model": "gpt-3.5-turbo",
  "preSolvePromptFiles": [
    "chainOfThought/2"
  ],
  "solvePromptFile": "solve/noTemplateNoProblem/3",
  "solveFailedPromptFile": "failedSolve/4",
  "solveFailedAttempts": 3,
  "systemPromptFile": "system/1"
}
# systemPrompt

You solve coding exercises

# preSolvePrompts

## preSolvePrompt: 0

Here is a coding problem:

Santa's reindeer typically eat regular reindeer food, but they need a lot of magical energy to deliver presents on Christmas. For that, their favorite snack is a special type of star fruit that only grows deep in the jungle. The Elves have brought you on their annual expedition to the grove where the fruit grows.

To supply enough magical energy, the expedition needs to retrieve a minimum of fifty stars by December 25th. Although the Elves assure you that the grove has plenty of fruit, you decide to grab any fruit you see along the way, just in case.

Collect stars by solving puzzles. Two puzzles will be made available on each day in the Advent calendar; the second puzzle is unlocked when you complete the first. Each puzzle grants one star. Good luck!

The jungle must be too overgrown and difficult to navigate in vehicles or access from the air; the Elves' expedition traditionally goes on foot. As your boats approach land, the Elves begin taking inventory of their supplies. One important consideration is food - in particular, the number of Calories each Elf is carrying (your puzzle input).

The Elves take turns writing down the number of Calories contained by the various meals, snacks, rations, etc. that they've brought with them, one item per line. Each Elf separates their own inventory from the previous Elf's inventory (if any) by a blank line.

For example, suppose the Elves finish writing their items' Calories and end up with the following list:

1000
2000
3000

4000

5000
6000

7000
8000
9000

10000

This list represents the Calories of the food carried by five Elves:

    The first Elf is carrying food with 1000, 2000, and 3000 Calories, a total of 6000 Calories.
    The second Elf is carrying one food item with 4000 Calories.
    The third Elf is carrying food with 5000 and 6000 Calories, a total of 11000 Calories.
    The fourth Elf is carrying food with 7000, 8000, and 9000 Calories, a total of 24000 Calories.
    The fifth Elf is carrying one food item with 10000 Calories.

In case the Elves get hungry and need extra snacks, they need to know which Elf to ask: they'd like to know how many Calories are being carried by the Elf carrying the most Calories. In the example above, this is 24000 (carried by the fourth Elf).

Find the Elf carrying the most Calories. How many total Calories is that Elf carrying?

Your puzzle answer was 71934.
--- Part Two ---

By the time you calculate the answer to the Elves' question, they've already realized that the Elf carrying the most Calories of food might eventually run out of snacks.

To avoid this unacceptable situation, the Elves would instead like to know the total Calories carried by the top three Elves carrying the most Calories. That way, even if one of those Elves runs out of snacks, they still have two backups.

In the example above, the top three Elves are the fourth Elf (with 24000 Calories), then the third Elf (with 11000 Calories), then the fifth Elf (with 10000 Calories). The sum of the Calories carried by these three elves is 45000.

Find the top three Elves carrying the most Calories. How many Calories are those Elves carrying in total?


Please explain 3-5 small steps to solve part 2 of the problem. Show your reasoning and explain your answer.


# completionsSoFar: 

## completion 0 
system: 

You solve coding exercises


## completion 1 
user: 

Here is a coding problem:

Santa's reindeer typically eat regular reindeer food, but they need a lot of magical energy to deliver presents on Christmas. For that, their favorite snack is a special type of star fruit that only grows deep in the jungle. The Elves have brought you on their annual expedition to the grove where the fruit grows.

To supply enough magical energy, the expedition needs to retrieve a minimum of fifty stars by December 25th. Although the Elves assure you that the grove has plenty of fruit, you decide to grab any fruit you see along the way, just in case.

Collect stars by solving puzzles. Two puzzles will be made available on each day in the Advent calendar; the second puzzle is unlocked when you complete the first. Each puzzle grants one star. Good luck!

The jungle must be too overgrown and difficult to navigate in vehicles or access from the air; the Elves' expedition traditionally goes on foot. As your boats approach land, the Elves begin taking inventory of their supplies. One important consideration is food - in particular, the number of Calories each Elf is carrying (your puzzle input).

The Elves take turns writing down the number of Calories contained by the various meals, snacks, rations, etc. that they've brought with them, one item per line. Each Elf separates their own inventory from the previous Elf's inventory (if any) by a blank line.

For example, suppose the Elves finish writing their items' Calories and end up with the following list:

1000
2000
3000

4000

5000
6000

7000
8000
9000

10000

This list represents the Calories of the food carried by five Elves:

    The first Elf is carrying food with 1000, 2000, and 3000 Calories, a total of 6000 Calories.
    The second Elf is carrying one food item with 4000 Calories.
    The third Elf is carrying food with 5000 and 6000 Calories, a total of 11000 Calories.
    The fourth Elf is carrying food with 7000, 8000, and 9000 Calories, a total of 24000 Calories.
    The fifth Elf is carrying one food item with 10000 Calories.

In case the Elves get hungry and need extra snacks, they need to know which Elf to ask: they'd like to know how many Calories are being carried by the Elf carrying the most Calories. In the example above, this is 24000 (carried by the fourth Elf).

Find the Elf carrying the most Calories. How many total Calories is that Elf carrying?

Your puzzle answer was 71934.
--- Part Two ---

By the time you calculate the answer to the Elves' question, they've already realized that the Elf carrying the most Calories of food might eventually run out of snacks.

To avoid this unacceptable situation, the Elves would instead like to know the total Calories carried by the top three Elves carrying the most Calories. That way, even if one of those Elves runs out of snacks, they still have two backups.

In the example above, the top three Elves are the fourth Elf (with 24000 Calories), then the third Elf (with 11000 Calories), then the fifth Elf (with 10000 Calories). The sum of the Calories carried by these three elves is 45000.

Find the top three Elves carrying the most Calories. How many Calories are those Elves carrying in total?


Please explain 3-5 small steps to solve part 2 of the problem. Show your reasoning and explain your answer.


## completion 2 
assistant: 



1. Read the input and store the Calories of each Elf in a list.
2. Sort the list in descending order to get the Elves carrying the most Calories at the beginning of the list.
3. Take the sum of the Calories of the first three Elves in the sorted list to get the total Calories carried by the top three Elves.
4. Return the total Calories calculated in step 3 as the answer.
5. Implement the above steps in code and run it on the given input to get the final answer.


# solvePrompt:

You must solve part 2 of using Deno and Typescript.

You can read files in Deno like this:

```typescript
import * as path from 'https://deno.land/std@0.101.0/path/mod.ts'

const readRelativeInput = (importUrl, inputFile) => {
  const dirname = path.dirname(path.fromFileUrl(importUrl))
  const filePath = path.join(dirname, 'data', inputFile)
  return Deno.readTextFileSync(filePath)
}
```

The puzzle input is stored at `./data/puzzleInput.txt`


Your solution should print console.log statements to help me understand what is happening as the code runs.

The last thing your solution should do is print the answer to the puzzle on a new line like this: `console.log('\n', answer)`


# answer: 

Here's the solution to part 2 of the problem using Deno and TypeScript:

```typescript
import * as path from 'https://deno.land/std@0.101.0/path/mod.ts'

const readRelativeInput = (importUrl, inputFile) => {
  const dirname = path.dirname(path.fromFileUrl(importUrl))
  const filePath = path.join(dirname, 'data', inputFile)
  return Deno.readTextFileSync(filePath)
}

const input = readRelativeInput(import.meta.url, 'puzzleInput.txt')

const elvesCalories = input.trim().split('\n\n').map(group => {
  const elfCalories = group.trim().split('\n').map(Number)
  return elfCalories.reduce((acc, curr) => acc + curr, 0)
})

const sortedElvesCalories = elvesCalories.sort((a, b) => b - a)

const topThreeElvesCalories = sortedElvesCalories.slice(0, 3)

const totalTopThreeElvesCalories = topThreeElvesCalories.reduce((acc, curr) => acc + curr, 0)

console.log('\n', totalTopThreeElvesCalories)
```

Explanation:

1. We use the `readRelativeInput` function to read the puzzle input from the file `puzzleInput.txt`.
2. We split the input into groups of Elves' Calorie counts using the `split` method and the separator `\n\n`.
3. For each group of Elves' Calorie counts, we split the string into an array of numbers using the `split` method and the separator `\n`, and then we use the `reduce` method to calculate the total Calories carried by the Elf.
4. We sort the list of Elves' Calorie counts in descending order using the `sort` method and a comparison function that returns the difference between the second argument and the first argument.
5. We take the first three elements of the sorted list using the `slice` method and store them in a new list.
6. We use the `reduce` method to calculate the sum of the Calories carried by the top three Elves.
7. We print the answer to the puzzle on a new line using `console.log`.
formatting
# Trying solution: 

 ```typescript
import * as path from "https://deno.land/std@0.101.0/path/mod.ts";

const readRelativeInput = (importUrl, inputFile) => {
  const dirname = path.dirname(path.fromFileUrl(importUrl));
  const filePath = path.join(dirname, "data", inputFile);
  return Deno.readTextFileSync(filePath);
};

const input = readRelativeInput(import.meta.url, "puzzleInput.txt");

const elvesCalories = input.trim().split("\n\n").map((group) => {
  const elfCalories = group.trim().split("\n").map(Number);
  return elfCalories.reduce((acc, curr) => acc + curr, 0);
});

const sortedElvesCalories = elvesCalories.sort((a, b) => b - a);

const topThreeElvesCalories = sortedElvesCalories.slice(0, 3);

const totalTopThreeElvesCalories = topThreeElvesCalories.reduce(
  (acc, curr) => acc + curr,
  0,
);

console.log("\n", totalTopThreeElvesCalories);

``` 

solution: 211447, actual solution: 211447
Solved!
Day 01.2 result: ✔️   Attempts: 1  Time Taken (secs): 63   GPT Requests: 2   Cost: $0.004668
